tests/ui/async-await/issue-73541-1.rs
// edition:2018

fn main() {
    'a: loop {
        async {
            loop {
                continue 'a
                //~^ ERROR use of unreachable label `'a`
            }
        };
    }
}
